# CanFP-Parsing

./: .Slides.md.revealjs.pandoc  .gitignore  .travis.yml  README.md  Slides.md  custom.css  index.html  notify.hs
images/: README.md
src/: Bencode.hs  CPSParser.hs  CanFP-Bencode.cabal  SimpleParser.hs
