name:                CanFP-Bencode
version:             0.1.0.0
synopsis:            Sample Bencode parsers
description:         Simple parsers for the talk at CanFP
homepage:            http://ivan-m.github.io/CanFP-Parsing
license:             MIT
license-file:        LICENSE
author:              Ivan Lazar Miljenovic
maintainer:          Ivan.Miljenovic@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Bencode
                     , SimpleParser
                     , CPSParser
  build-depends:       base < 5
  default-language:    Haskell2010
